--- a/MiniSupermarket/MiniSupermarket.csproj
+++ b/MiniSupermarket/MiniSupermarket.csproj
@@ -9,8 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
 </Project>
